fix(Profile):fixed profile blurr css issue

--- a/src/modules/Dashboard/modules/Profile/components/EditProfilePopUp/pages/EditProfilePopUp.module.css
+++ b/src/modules/Dashboard/modules/Profile/components/EditProfilePopUp/pages/EditProfilePopUp.module.css
@@ -82,11 +82,11 @@
     text-align: left;
 }
 
-@media (max-width: 1500px) {
+/* @media (max-width: 1500px) {
     .edit_profile_container {
-        left: 0;
+        left: unset;
     }
-}
+} */
 
 @media (max-width: 768px) {
     .edit_profile_container {
